# drm-timetables

./: Readme.md  draw.c  drm_helper.c  drm_helper.h  drm_test.c  drm_timetables.c  main.c  meson.build  utils.c  utils.h
include/: draw.h  drm_helper.h  utils.h
src/: draw.c  drm_helper.c  utils.c
